# front

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html  test_requirements.txt
.github/workflows/: ci.yml
_modules/: index.html
_modules/front/: app_maker.html  crude.html  dag.html  data_binding.html  py2pydantic.html  spec_maker_base.html  state.html  tools.html  types.html  util.html
_sources/: table_of_contents.rst.txt
_sources/module_docs/: front.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docs/_static/: documentation_options.js
docs/module_docs/: front.html
docsrc/: index.rst  table_of_contents.rst
front/: __init__.py  app_maker.py  app_maker_base.py  base.py  crude.py  dag.py  data_binding.py  old_stuff.py  page_funcs.py  py2pydantic.py  session_state.py  spec_maker.py  spec_maker_base.py  state.py  tools.py  types.py  util.py
front/elements/: __init__.py  element_flags.py  elements.py  implementation.py  tree_maker_base.py
front/examples/: data_binding.py  experimentation.py  issues.py  kaggle_front.py  keyword_args.py  pos_key_args.py  position_args.py  simple.py  simple_ml_1.py  tw_data_binding.py  wordle.py
front/notebooks/: convert_to_pydantic.ipynb
module_docs/: front.html
tests/: test_smoke.py
(+204 files in other folders)
