[metadata]
name = front
version = 0.1.45
url = https://github.com/i2mint/front
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Getting from python objects to UIs exposing them
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = front

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dill
	dol
	i2
	meshed
	pydantic
